css/style.css
@import url(https://fonts.googleapis.com/css?family=Oswald);
@import url(https://fonts.googleapis.com/css?family=Alice|Judson:400,700);

* {
  margin: 0;
}

#first-photos {
  background: linear-gradient( to right top, #FFFFFF, #d6d1d1);
}

#second-photos {
  background: linear-gradient( to right top, rgb(206, 175, 219), rgb(178, 127, 199));
}

#headertext {
  position: absolute;
  top: 20px;
  left: 20px;
  padding: 10px 0 10px 10px;
  color: white;
}

.main-title, h1 {
  font-family: 'Oswald', sans-serif;
  font-size: 60px;
  color: white;
}

.subtitle {
  font-family: 'Alice', serif;
  font-size: 26px;
  display: none;
  color: white;
}

h1, h2 {
  color: rgba(0, 0, 0, 0.7);
}

h2 {
  font-family: 'Alice', serif;
  font-size: 26px;
}

h3 {
  font-family: 'Oswald', sans-serif;
  padding-bottom: 10px;
}

.summary {
  text-align: center;
}

h2.summary {
  padding-bottom: 50px;
}

.container {
  width: 960px;
  margin: 0 auto;
}

.container-flex {
  display: flex;
  line-height: 25px;
}

.container-skills, .container-contact, .container-portfolio {
  flex-grow: 1;
}

.container-contact ul, #skills-list, #portfolio-list {
  font-family: 'Alice', serif;
  list-style: none;
  padding-left: 0;
}

.headerimg {
  width: 100%;
}

#details {
  height: 60vh;
  background-color: white;
  margin: 0;
  top: 0px;
}

.photo-print {
  padding: 30;
  height: 300px;
  border: 18px solid white;
  margin: 20px;
  box-shadow: 1px -1px 2px 0px #EEE, 1px 0px 0px 10px rgb(249, 249, 249), -6px 5px 9px 7px #ccc;
  display: inline-block;
  box-sizing: border-box;
}

.behind {
  height: 300px;
  width: 431.5px;
  background-color: black;
  display: inline-block;
  margin: 20px;
}

.first {
  top: 50px;
  left: 100px;
  position: absolute;
}

.second {
  top: 250px;
  left: 700px;
  position: absolute;
}

.skill {
  display: inline-block;
  position: absolute;
  left: 5px;
  font-size: 24px;
  display: none;
  font-family: 'Oswald', sans-serif;
}

#skills-div, #portfolio-div {
  top: 250px;
  left: 700px;
  position: absolute;
  background-color: rgba(0, 0, 0, 1);
}

#portfolio-div {
  background-color: rgba(255, 255, 255, 1);
}

#second-div {
  background: transparent;
}

.contact, .port  {
  padding: 20px 0 20px 20px;
  width: 80%;
  height: 40px;
  background-color: black;
  transform: translate(-50%, -150%);
  position:absolute;
  top: 50%;
  left: 50%;
}

.contact p {
  margin-bottom: 10px;
  font-family: 'Oswald', sans-serif;
  font-size: 18px;
  color: white;
}

.contact a {
  color: #009901;
  text-decoration: none;
}

.port {
  transform: translate(-50%, -50%);
  background-color: transparent;
}

.port p {
  color: rgba(0, 0, 0, 0.7);
  font-family: 'Oswald', sans-serif;
  font-size: 18px;
  text-align: center;
}

.subhead {
  transform: translate(-50%, -120%);
  position:absolute;
  top: 50%;
  left: 50%;
  font-size: 48px;
}

.skill {
  color: white;
}

#aboutme {
  background-color: white;
  margin-top: 10px;
  height: 28vh;
  padding: 20px 200px 20px 200px;
  font-family: 'Alice', serif;
  color: rgba(0, 0, 0, 0.7);
}

.scroll-down {
  position: absolute;
  display: block;
  width: 25px;
  left: 50%;
  bottom: 35px;
  opacity: 0.5;
}

.label {
  width: 100px;
  background-color: white;
  padding: 20px;
  position: absolute;
  display: inline-block;
  text-align: center;
  box-shadow: -2px 4px 5px rgba(128, 128, 128, 0.25);
  border: 2px solid grey;
  color: rgba(0, 0, 0, 0.7);
  font-family: 'Oswald', sans-serif;
  font-size: 14px;
  box-sizing: border-box;
}

.label:hover {
  box-shadow: 0px 0px 8px #009901 !important;
}

#label-first, #label-third {
  left: 463px;
  top: 400px;
}

#label-second, #label-fourth {
  left: 1064px;
  top: 172px;
}

#label-third, #label-fourth {
  box-shadow: -2px 4px 5px rgba(0,0,0,0.2);
}

#third-img, #fourth-img {
  box-shadow: 1px -1px 2px 0px #EEE, 1px 0px 0px 10px rgb(249, 249, 249), -6px 5px 9px 7px rgba(0,0,0,0.5);
}

#about-ian, #skills {
  font-family: 'Oswald', sans-serif;
  font-size: 32px;
  padding: 20px 0 20px 20px;
  width: 90%;
  height: 40px;
  background-color: black;
  color: #009901;
  transform: translate(-50%, -60%);
  position:absolute;
  top: 50%;
  left: 50%;
}

#skills {
  text-align: center;
  color: white;
}

.lrg-img {
  transform: translate(-50%, -50%);
  position:absolute;
  top: 60%;
  left: 50%;
  max-height: 350px;
  box-shadow: 0px 5px 20px grey;
  border-radius: 10px;
}

.port-title, .port-blurb {
  rgba(0, 0, 0, 0.7);
  text-align: center;
  font-family: 'Alice', serif;
}

.port-title {
  font-size: 32px;
  margin-bottom: 10px;
}

.port-blurb {
  font-weight: lighter;
  margin-bottom: 5px;
}

.links {
  text-align: center;
}

.links a {
  font-family: 'Alice', serif;
  text-decoration: none;
  font-weight: bold;
  color: rgba(0, 0, 0, 0.7);
}

.close {
  width: 25px;
  position: absolute;
  top: 25px;
  right: 25px;
}

#overlay {
  border-radius: 5px;
  width: 65%;
  margin: 40px auto;
  padding: 20px;
}

#forward {
  transform: rotate(270deg);
  width: 45px;
  position: absolute;
  top: 50%;
  right: 40px;
}

#back {
  transform: rotate(90deg);
  width: 45px;
  position: absolute;
  top: 50%;
  left: 40px;
}

#back:hover, #forward:hover, .close:hover, lrg-img:hover, .label:hover {
  cursor: pointer;
}

.instructions {
  font-family: 'Oswald', sans-serif;
  font-size: 13px;
  background-color: whitesmoke;
  box-shadow: 0px 0px 15px grey;
  border-radius: 5px;
  width: 300px;
  position: fixed;
  top: 30px;
  right: 230px;
  padding: 20px;
  text-align: center;
}

.instructions:hover {
  cursor: pointer;
  box-shadow: 0px 0px 15px black;
}

#photo {
  border-radius: 50%;
  position: absolute;
  top: 60px;
  right: 60px;
  width: 160px;
  box-shadow: 0px 0px 7px grey;
}

/*///////////// mobile view ////////////*/

@media only screen and (max-device-width: 480px) {

    .photo-print {
      box-shadow: none;
      border: 8px solid white;
    }

    .first, .second, .behind, #skills-div, #portfolio-div, #third-img, #fourth-img {
      left: 45%;
      transform: translate(-50%);
      position: fixed;
      height: 30%;
      width: 70%
    }

    .first {
      top: 4%;
      width: 70%;
    }

    .second, #skills-div, #portfolio-div {
      top: 50%;
    }

    #skills-div, #portfolio-div {
      width: 70%;
    }

    .label {
      width: 50%;
      left: 50% !important;
      transform: translate(-50%);
      font-size: 12px;
      padding: 10px;
    }

    .photo-print {
      box-shadow: none !important;
      border: 8px solid white;
    }

    #label-first, #label-third {
      top: 40%;
    }

    #label-second, #label-fourth {
      top: 86%;
    }

    #aboutme {
    font-size: 14px;
    height: 63%;
    margin-top: 60px;
    padding: 25px 55px 10px 35px;
    }

    #details {
      height: 105%;
      top: -32px;
    }

    .main-title {
      font-size: 24px;
      color: black;
    }

    .subtitle {
      font-size: 14px;
      color: black;
    }

    .scroll-down {
      display: none;
    }

    .headerimg {
      top: 0px;
    }

    #headertext {
      position: absolute;
      top: 22%;
      left: 50%;
      transform: translate(-50%);
      text-align: center;
      padding: 20px 0 10px 10px;
      color: black;
    }

    #about-ian {
      font-size: 22px;
    }

    .contact {
      padding: 10px 0 30px 20px;
      width: 90%;
      top: 72%;
    }

    .contact p {
      font-size: 10px;
    }

    .lrg-img {
      transform: translate(-50%, -50%);
      position: absolute;
      top: 80%;
      left: 50%;
      max-height: 35%;
      max-width: 85%;
      box-shadow: 0px 5px 20px grey;
      border-radius: 10px;
    }

    .instructions {
      display: none;
    }

    .container {
      display: none;
    }

	}

